--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@100;200;300;400&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* > * {
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    background: #dcdce6;
+    background-image: url('./assets/background.png');
+}
